<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.snehamishra.smartshopping.ShopActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_absoluteX="0dp"
        tools:layout_absoluteY="0dp">

        <TextView
        android:id="@+id/btn_back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:onClick="back"
        android:text="@string/btn_back" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_AR"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"

                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:text="    Launch Augmented Reality"
                android:textSize="20dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="top|end"
                android:layout_marginEnd="73dp"
                android:layout_marginRight="73dp"
                android:onClick="startUnity"
                app:srcCompat="@android:drawable/ic_menu_camera" />

        </RelativeLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/lbl_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/lbl_search" />

            <EditText
                android:id="@+id/txt_search"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_search"
                android:layout_marginLeft="2dp"
                android:ems="10"
                android:hint="@string/search_hint"
                android:inputType="textPersonName" />

            <Button
                android:id="@+id/btn_search"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/lbl_search"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/txt_search"
                android:layout_toRightOf="@id/txt_search"
                android:onClick="searchCall"
                android:text="@string/btn_search" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/lbl_AR"
            android:layout_alignParentBottom="true"
            android:layout_alignStart="@+id/lbl_AR">

            <TextView
                android:id="@+id/lbl_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:text="@string/lbl_sort" />

            <Spinner
                android:id="@+id/spin_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_toEndOf="@id/lbl_sort"
                android:layout_toRightOf="@id/lbl_sort" />

            <Button
                android:id="@+id/btn_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toEndOf="@id/spin_sort"
                android:layout_toRightOf="@id/spin_sort"
                android:onClick="sortCall"
                android:text="@string/btn_sort" />

        </RelativeLayout>


        <ListView
            android:id="@+id/lst_items"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_margin="2dp"
            android:choiceMode="singleChoice"
            android:listSelector="@color/colorSelect" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
